Updated style for tray tooltip

--- a/DFWatch/Styles/ToolTip.xaml
+++ b/DFWatch/Styles/ToolTip.xaml
@@ -8,18 +8,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              d:DesignHeight="35" d:DesignWidth="250"
-             Background="{DynamicResource MaterialDesignPaper}"
-             Foreground="{DynamicResource MaterialDesignBody}">
+             Opacity=".85">
 
-        <Border Width="Auto" Height="30"
-                Padding="10,0"
-                BorderBrush="{DynamicResource MaterialDesignDivider}"
-                BorderThickness="1" CornerRadius="4"
-                Opacity=".9">
-            <TextBlock HorizontalAlignment="Center"
-                       VerticalAlignment="Center"
-                       FontSize="12" SnapsToDevicePixels="True"
-                       Text="{x:Static helper:AppInfo.ToolTipVersion}" />
-        </Border>
+    <Border Width="Auto" Height="30"
+            Padding="10,0"
+            Background="{DynamicResource MaterialDesignPaper}"
+            BorderBrush="{DynamicResource MaterialDesignDivider}"
+            BorderThickness="1" CornerRadius="4">
+        <TextBlock HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontSize="12"
+                   Foreground="{DynamicResource MaterialDesignBody}"
+                   SnapsToDevicePixels="True"
+                   Text="{x:Static helper:AppInfo.ToolTipVersion}" />
+    </Border>
 
 </UserControl>
