--- a/DFWatch/MainWindow.xaml
+++ b/DFWatch/MainWindow.xaml
@@ -3,11 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:bh="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:hc="https://handyorg.github.io/handycontrol"
         xmlns:helper="clr-namespace:DFWatch.Helpers"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:styles="clr-namespace:DFWatch.Styles"
-        xmlns:tb="clr-namespace:H.NotifyIcon;assembly=H.NotifyIcon.Wpf"
         xmlns:viewmodels="clr-namespace:DFWatch.ViewModels"
         mc:Ignorable="d"
         Title="{x:Static helper:AppInfo.AppName}"
@@ -51,18 +51,11 @@
         </Grid.ColumnDefinitions>
         <!--#endregion-->
 
-        <!--#region Icon with Context menu in system tray-->
-        <tb:TaskbarIcon x:Name="tbIcon"
-                        IconSource="/Images/DW.ico"
-                        LeftClickCommand="{Binding ShowMainWindowCommand}"
-                        MenuActivation="RightClick">
-            <tb:TaskbarIcon.TrayToolTip>
-                <styles:ToolTip />
-            </tb:TaskbarIcon.TrayToolTip>
-            <tb:TaskbarIcon.DataContext>
-                <viewmodels:Commands />
-            </tb:TaskbarIcon.DataContext>
-            <tb:TaskbarIcon.ContextMenu>
+        <!--#region Tray icon with context menu-->
+        <hc:NotifyIcon x:Name="notifyIcon"
+                       Icon="/Images/DW.ico"
+                       Text="{x:Static helper:AppInfo.ToolTipVersion}">
+            <hc:NotifyIcon.ContextMenu>
                 <ContextMenu FontSize="13"
                              Style="{StaticResource MaterialDesignContextMenu}">
                     <ContextMenu.DataContext>
@@ -88,10 +81,10 @@
                                         Executed="StopWatching_Executed" />
                     </ContextMenu.CommandBindings>
                 </ContextMenu>
-            </tb:TaskbarIcon.ContextMenu>
-
-        </tb:TaskbarIcon>
+            </hc:NotifyIcon.ContextMenu>
+        </hc:NotifyIcon>
         <!--#endregion-->
+
 
         <!--#region Title Row-->
         <Grid Grid.Column="1">
