--- a/DFWatch/App.xaml
+++ b/DFWatch/App.xaml
@@ -2,20 +2,50 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:viewmodels="clr-namespace:DFWatch.ViewModels"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <materialDesign:BundledTheme BaseTheme="Dark"
                                              ColorAdjustment="{materialDesign:ColorAdjustment}"
-                                             PrimaryColor="Blue" SecondaryColor="DeepOrange" />
+                                             PrimaryColor="Blue"
+                                             SecondaryColor="DeepOrange" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
                 <ResourceDictionary Source="Styles/ButtonStyles.xaml" />
                 <ResourceDictionary Source="Styles/DataProviders.xaml" />
                 <ResourceDictionary Source="Styles/DataTemplates.xaml" />
                 <ResourceDictionary Source="Styles/NavigationStyles.xaml" />
+                <ResourceDictionary Source="Styles/MenuStyles.xaml" />
                 <ResourceDictionary Source="Styles/ScrollBarStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <!--#region Context menu-->
+            <ContextMenu x:Key="TrayContextMenu"
+                         Style="{StaticResource TKContextMenu}">
+
+                <ContextMenu.DataContext>
+                    <viewmodels:NavigationViewModel />
+                </ContextMenu.DataContext>
+
+                <MenuItem Command="{Binding ShowMainWindowCommand}"
+                          Header="Show Main Window" />
+
+                <Separator Height="14" />
+
+                <MenuItem Command="{Binding StartWatchingCommand}"
+                          Header="Start Watcher" />
+
+                <MenuItem Command="{Binding StopWatchingCommand}"
+                          Header="Stop Watcher" />
+
+                <Separator Height="14" />
+
+                <MenuItem Command="{Binding ExitApplicationCommand}"
+                          Header="Exit" />
+            </ContextMenu>
+            <!--#endregion-->
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
