--- a/DFWatch/App.xaml
+++ b/DFWatch/App.xaml
@@ -1,6 +1,8 @@
 ﻿<Application x:Class="DFWatch.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:convert="clr-namespace:DFWatch.Converters"
+             xmlns:helpers="clr-namespace:DFWatch.Helpers"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewmodels="clr-namespace:DFWatch.ViewModels"
              StartupUri="MainWindow.xaml">
@@ -28,16 +30,26 @@
                     <viewmodels:NavigationViewModel />
                 </ContextMenu.DataContext>
 
+                <ContextMenu.Resources>
+                    <convert:BooleanInverter x:Key="BoolInverter" />
+                    <helpers:WatcherHelpers x:Key="watcherhelpers" />
+                </ContextMenu.Resources>
+
                 <MenuItem Command="{Binding ShowMainWindowCommand}"
                           Header="Show Main Window" />
 
                 <Separator Height="14" />
 
                 <MenuItem Command="{Binding StartWatchingCommand}"
-                          Header="Start Watcher" />
+                          Header="Start Watcher"
+                          IsEnabled="{Binding Path=IsWatching,
+                                              Source={StaticResource watcherhelpers},
+                                              Converter={StaticResource BoolInverter}}" />
 
                 <MenuItem Command="{Binding StopWatchingCommand}"
-                          Header="Stop Watcher" />
+                          Header="Stop Watcher"
+                          IsEnabled="{Binding Path=IsWatching,
+                                              Source={StaticResource watcherhelpers}}" />
 
                 <Separator Height="14" />
 
