--- a/DFWatch/MainWindow.xaml
+++ b/DFWatch/MainWindow.xaml
@@ -2,11 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:bh="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:convert="clr-namespace:DFWatch.Converters"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:helper="clr-namespace:DFWatch.Helpers"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:styles="clr-namespace:DFWatch.Styles"
         xmlns:viewmodels="clr-namespace:DFWatch.ViewModels"
         mc:Ignorable="d"
         Title="{x:Static helper:AppInfo.AppName}"
@@ -14,6 +14,7 @@
         MinHeight="365"
         Background="{DynamicResource MaterialDesignPaper}"
         Closing="Window_Closing"
+        ContentRendered="Window_ContentRendered"
         FontFamily="Segoe UI" FontSize="12"
         Style="{StaticResource MaterialDesignWindow}"
         TextElement.FontWeight="Regular"
@@ -35,6 +36,11 @@
         <viewmodels:NavigationViewModel />
     </Window.DataContext>
     <!--#endregion-->
+
+    <Window.Resources>
+        <convert:BooleanInverter x:Key="BoolInverter" />
+        <helper:WatcherHelpers x:Key="watcherhelpers" />
+    </Window.Resources>
 
     <Grid x:Name="MainGrid">
 
@@ -149,6 +155,9 @@
                 <Button x:Name="btnStartWatcher"
                         Grid.Row="0"
                         Command="{Binding StartWatchingCommand}"
+                        IsEnabled="{Binding Path=IsWatching,
+                                            Source={StaticResource watcherhelpers},
+                                            Converter={StaticResource BoolInverter}}"
                         Style="{StaticResource NavButton}">
                     <Button.Content>
                         <Grid HorizontalAlignment="Left">
@@ -164,6 +173,8 @@
                 <Button x:Name="btnStopWatcher"
                         Grid.Row="1"
                         Command="{Binding StopWatchingCommand}"
+                        IsEnabled="{Binding Path=IsWatching,
+                                            Source={StaticResource watcherhelpers}}"
                         Style="{StaticResource NavButton}">
                     <Button.Content>
                         <Grid HorizontalAlignment="Left">
